<resources>
    <string name="app_name">AGROPLACE</string>
    <string name="item_nova_venda">Nova Venda</string>
    <string name="item_sair">Sair</string>
    <string name="item_ajuda">Ajuda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noProducts">Oops, nenhum produto encontrado</string>
    <string name="noProductsHint">Verifique sua conexão ou cadastre novos produtos</string>

    <string name="noConversations">Oops, nenhuma conversa encontrada</string>
    <string name="noConversationsHint">Verifique sua conexão ou inicie novas convesas</string>

    <string name="noContacts">Oops, nenhum contato encontrado</string>
    <string name="noContactsHint">Verifique sua conexão ou cadastre novos contatos</string>
    <string name="title_activity_esqueceu_asenha">Esqueceu a senha?</string>

</resources>
