<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConversasActivity"
    android:orientation="vertical"
    app:itemTextColor="@android:color/black">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <br.edu.ifro.agroplace.helper.SlidingTabLayout
        android:id="@+id/stl_tabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        >

    </br.edu.ifro.agroplace.helper.SlidingTabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_pagina"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>