...
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

            //Vendedor
            <LinearLayout
                android:id="@+id/produto_vendedor_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <TextView
...
