...
        android:text="Categoria:"
        android:textSize="16dp"
        android:textColor="#000"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/categorias_spinner"
        android:layout_marginLeft="5dp"></Spinner>
</LinearLayout>


<androidx.viewpager.widget.ViewPager
    android:id="@+id/vp_main"
...
